Fixed problems with RJ-2025-020

--- a/_articles/RJ-2025-020/RJ-2025-020.Rmd
+++ b/_articles/RJ-2025-020/RJ-2025-020.Rmd
@@ -40,8 +40,8 @@ author:
 date: '2025-09-23'
 date_received: '2024-07-16'
 journal:
-  firstpage: 205
-  lastpage: 230
+  firstpage: ~
+  lastpage: []
 volume: 17
 issue: 2
 slug: RJ-2025-020
@@ -545,7 +545,7 @@ mixture framework.
 
 ::: {#tab:compare}
   -------------- --------------------------- --------------------------- --------------------------- --------------------------- --------------------------- ---------------------------
-                      **Full rankings**                                        **Top partial**                                      **Arbitrary partial**    
+                      **Full rankings**                                        **Top partial**                                      **Arbitrary partial**
 
                             $G=1$                       $G>1$                       $G=1$                       $G>1$                       $G=1$                       $G>1$
 
@@ -628,7 +628,7 @@ computational performance of the **MSmix** package, see Appendix A2.
   ---------------------------------------------------------------------------------
             **MSmix**   **rankdist**                      **MSmix**   **rankdist**
   ------- ----------- -------------- ------- ----------- ----------- --------------
-    $k=5$       0.029          0.301          $n = 5$       0.049          0.089 
+    $k=5$       0.029          0.301          $n = 5$       0.049          0.089
 
     $k=4$       0.041          0.321          $n = 6$       0.035          0.185
 
@@ -722,20 +722,20 @@ basic application of these commands is the following
 R> data_descr_AF <- data_description(rankings = ranks_AF)
 R> print(data_descr_AF)
 
-Sample size: 99 
-N. of items: 7 
+Sample size: 99
+N. of items: 7
 
 Frequency distribution of the number of ranked items:
- 1  2  3  4  5  6  7 
- 0  0  0  0  0  0 99 
+ 1  2  3  4  5  6  7
+ 0  0  0  0  0  0 99
 
 Number of missing positions for each item:
-Abs Red Sma Non Req Eme Unc 
-  0   0   0   0   0   0   0 
+Abs Red Sma Non Req Eme Unc
+  0   0   0   0   0   0   0
 
 Mean rank of each item:
- Abs  Red  Sma  Non  Req  Eme  Unc 
-2.45 3.27 4.02 2.71 5.38 5.01 5.15 
+ Abs  Red  Sma  Non  Req  Eme  Unc
+2.45 3.27 4.02 2.71 5.38 5.01 5.15
 
 Borda ordering:
 "Abs" "Non" "Red" "Sma" "Eme" "Unc" "Req"
@@ -837,7 +837,7 @@ R> top3_AF$part_rankings[1:3,]
 2   1  NA   3   2  NA  NA  NA
 3   3  NA   1   2  NA  NA  NA
 > table(top3_AF$nranked)
- 3 
+ 3
 99
 ```
 
@@ -860,8 +860,8 @@ R> top_AF$part_rankings[1:3,]
 3   3  NA   1   2  NA  NA  NA
 
 R> table(top_AF$nranked)
- 1  2  3  4  5 
- 1 14 16 19 49 
+ 1  2  3  4  5
+ 1 14 16 19 49
 ```
 
 In this case, the vector `probs` assigns an increasing chance of
@@ -922,7 +922,7 @@ full rankings in each row. In the example below, we use the identity
 permutation and its opposite as the reference sequences for completion.
 
 ``` r
-R> data_completion(rankings = ranks_toy, ref_rho = rbind(1:5, 5:1)) 
+R> data_completion(rankings = ranks_toy, ref_rho = rbind(1:5, 5:1))
      [,1] [,2] [,3] [,4] [,5]
 [1,]    2    4    1    5    3
 [2,]    5    4    3    1    2
@@ -988,7 +988,7 @@ R> sam_unif$weights
 [1] 0.49165535 0.04123627 0.46710838
 
 R> table(sam_unif$classification)
- 1  2  3 
+ 1  2  3
 35  5 60
 ```
 
@@ -1029,7 +1029,7 @@ R> sam_sep$weights
 
 R> spear_dist(rankings = sam_sep$rho)/max_spear_dist
      1         2
-2 0.6309524          
+2 0.6309524
 3 0.7023810 0.6666667
 ```
 
@@ -1115,8 +1115,8 @@ The BIC values of the six estimated models are
 
 ``` r
 R> print(BIC)
-   G = 1    G = 2    G = 3    G = 4    G = 5    G = 6 
-1494.435 1461.494 1442.749 1444.223 1449.714 1453.101  
+   G = 1    G = 2    G = 3    G = 4    G = 5    G = 6
+1494.435 1461.494 1442.749 1444.223 1449.714 1453.101
 ```
 
 ![Figure 3: Bump plot depicting the estimated consensus rankings of the
@@ -1161,12 +1161,12 @@ Group2 "Abs" "Non" "Red" "Sma" "Req" "Eme" "Unc"
 Group3 "Non" "Abs" "Red" "Sma" "Unc" "Eme" "Req"
 
 Component-specific precisions:
-Group1 Group2 Group3 
- 0.111  0.241  0.087 
+Group1 Group2 Group3
+ 0.111  0.241  0.087
 
 Mixture weights:
-Group1 Group2 Group3 
- 0.083  0.343  0.574 
+Group1 Group2 Group3
+ 0.083  0.343  0.574
 ```
 
 which also displays the estimated modal orderings in the rows of the
@@ -1245,14 +1245,14 @@ R> CI_bootSoft <- bootstrapMSmix(object = FIT.try[[3]], n_boot = 500, all = TRUE
 R> print(CI_bootSoft)
 Bootstrap itemwise 95%CIs for the consensus rankings:
 
-       Abs           Red         Sma           Non     Req         Eme    
+       Abs           Red         Sma           Non     Req         Eme
 Group1 "{3,4,5,6,7}" "{4,5,6,7}" "{2,3,4,5,6}" "{6,7}" "{1,2,3,4}" "{1,2}"
-Group2 "{1}"         "{2,3}"     "{4}"         "{2,3}" "{5}"       "{6}"  
+Group2 "{1}"         "{2,3}"     "{4}"         "{2,3}" "{5}"       "{6}"
 Group3 "{1,2,3}"     "{2,3}"     "{4,5}"       "{1,2}" "{7}"       "{5,6}"
-       Unc        
+       Unc
 Group1 "{2,3,4,5}"
-Group2 "{7}"      
-Group3 "{4,5,6}"  
+Group2 "{7}"
+Group3 "{4,5,6}"
 
 Bootstrap 95%CIs for the precisions:
        lower upper
@@ -1341,9 +1341,9 @@ R> rankings <- ranks_beers[,1:20]
 R> subset_beers <- (rowSums(is.na(rankings)) <= 8)
 R> library(doParallel)
 R> registerDoParallel(cores = detectCores())
-R> FIT_aug <- fitMSmix(rankings,n_clust = 1, n_start = 15, 
+R> FIT_aug <- fitMSmix(rankings,n_clust = 1, n_start = 15,
 +                     subset = subset_beers, mc_em = FALSE, parallel = TRUE)
-R> FIT_mcem <- fitMSmix(rankings, n_clust = 1, n_start = 15, 
+R> FIT_mcem <- fitMSmix(rankings, n_clust = 1, n_start = 15,
 +                      subset = subset_beers, mc_em = TRUE, parallel = TRUE)
 ```
 
@@ -1361,11 +1361,11 @@ reference="alg:partial_mixture"} is implemented.[^11] We note that, for
 this application, the results of the two methods are very similar.
 
 ``` r
-R> spear_dist(FIT_aug$mod$rho,FIT_mcem$mod$rho)/(2*choose(20+1,3)) 
+R> spear_dist(FIT_aug$mod$rho,FIT_mcem$mod$rho)/(2*choose(20+1,3))
 [1] 0.001503759
 
 R> c('theta_aug' = FIT_aug$mod$theta, 'theta_mcem' = FIT_mcem$mod$theta)
-  theta_aug  theta_mcem 
+  theta_aug  theta_mcem
 0.008580397 0.008964391
 ```
 
@@ -1376,23 +1376,23 @@ multiple starting points of the EM algorithm used to fit the bootstrap
 samples.
 
 ``` r
-R> boot_mcem <- bootstrapMSmix(object = FIT_mcem, n_boot = 300, n_start = 15, 
+R> boot_mcem <- bootstrapMSmix(object = FIT_mcem, n_boot = 300, n_start = 15,
                              all = TRUE, parallel = TRUE)
 
 R> print(boot_mcem)
 Bootstrap itemwise 95%CIs for the consensus rankings:
 
-       Stella                   Kwak          KronKron  Faro                     
+       Stella                   Kwak          KronKron  Faro
 Group1 "{12,13,14,15,16,17,18}" "{2,3,4,5,6}" "{19,20}" "{8,9,10,11,12,13,14,15}"
-       Kron1664           Chimay  Pelforth           KronCarls               
+       Kron1664           Chimay  Pelforth           KronCarls
 Group1 "{14,15,16,17,18}" "{1,2}" "{11,12,13,14,15}" "{12,13,14,15,16,17,18}"
-       KronKanter Hoegaarden           Grimbergen      Pietra                 
+       KronKanter Hoegaarden           Grimbergen      Pietra
 Group1 "{19,20}"  "{6,7,8,9,10,11,12}" "{2,3,4,5,6,7}" "{6,7,8,9,10,11,12,13}"
-       Affligem         Goudale           Leffe             Heineken          
+       Affligem         Goudale           Leffe             Heineken
 Group1 "{3,4,5,6,7,8}" "{4,5,6,7,8,9,10}" "{6,7,8,9,10,11}" "{14,15,16,17,18}"
-       Duvel             Choulette                Orval                       
+       Duvel             Choulette                Orval
 Group1 "{2,3,4,5,6,7,8}" "{12,13,14,15,16,17,18}" "{5,6,7,8,9,10,11,12,13,15}"
-       Karmeliet      
+       Karmeliet
 Group1 "{1,2,3,4,5,6}"
 
 Bootstrap 95%CIs for the precisions:
@@ -1884,15 +1884,15 @@ In the reduced Beers dataset used in our application, 18 respondents
 alternatives.
 
 ``` r
-  R> n\_items <- 20
-  R> rankings <- ranks\_beers[,1:n\_items]
-  R> subset\_beers <- (rowSums(is.na(rankings)) <= 8)
-  R> rankings\_subset <- rankings[subset\_beers,]
-  R> is\_partial <- rowSums(is.na(rankings\_subset))>1
-  R> cbind(Freq = table(is\_partial), '\%' = round(100*prop.table(table(is\_partial))))
+  R> n_items <- 20
+  R> rankings <- ranks_beers[,1:n_items]
+  R> subset_beers <- (rowSums(is.na(rankings)) <= 8)
+  R> rankings_subset <- rankings[subset_beers,]
+  R> is_partial <- rowSums(is.na(rankings_subset))>1
+  R> cbind(Freq = table(is_partial), '\%' = round(100*prop.table(table(is_partial))))
        Freq  \%
   FALSE   18 39
-  TRUE    28 61    
+  TRUE    28 61
 ```
 
 Notably, although the survey design did not require respondents to
@@ -1901,14 +1901,14 @@ clear top-like censoring pattern, as highlighted by the higher rate of
 missingness for bottom positions.
 
 ``` r
-  R> rankings\_subset\_part <- rankings\_subset[is\_partial,]
-  R> orderings\_subset\_part <- data\_conversion(rankings\_subset\_part)
-  R> na\_perc\_by\_rank <- round(100*colMeans(is.na(orderings\_subset\_part)),1)
-  R> names(na\_perc\_by\_rank) <- paste("Rank", 1:n\_items)
-  R> na\_perc\_by\_rank
-   Rank 1  Rank 2  Rank 3  Rank 4  Rank 5  Rank 6  Rank 7  Rank 8  Rank 9 Rank 10 
-      7.1     7.1     3.6     3.6     3.6     7.1     7.1    14.3     3.6     7.1 
-  Rank 11 Rank 12 Rank 13 Rank 14 Rank 15 Rank 16 Rank 17 Rank 18 Rank 19 Rank 20 
+  R> rankings_subset_part <- rankings_subset[is_partial,]
+  R> orderings_subset_part <- data_conversion(rankings_subset_part)
+  R> na_perc_by_rank <- round(100*colMeans(is.na(orderings_subset_part)),1)
+  R> names(na_perc_by_rank) <- paste("Rank", 1:n_items)
+  R> na_perc_by_rank
+   Rank 1  Rank 2  Rank 3  Rank 4  Rank 5  Rank 6  Rank 7  Rank 8  Rank 9 Rank 10
+      7.1     7.1     3.6     3.6     3.6     7.1     7.1    14.3     3.6     7.1
+  Rank 11 Rank 12 Rank 13 Rank 14 Rank 15 Rank 16 Rank 17 Rank 18 Rank 19 Rank 20
      28.6    32.1    35.7    39.3    42.9    50.0    53.6    46.4    46.4    46.4
 ```
 
@@ -1925,18 +1925,18 @@ The code below shows that, thanks to descriptive tools supplied by
 computation of these quantities is straightforward.
 
 ``` r
-  R> descr\_full=data\_description(rankings\_subset,subset=!is\_partial)
-  R> descr\_part=data\_description(rankings\_subset,subset=is\_partial)
-  R> na\_prop\_part\_by\_item <- descr\_part\$n\_ranks\_by\_item[1,]/nrow(rankings\_subset\_part)
+  R> descr_full=data_description(rankings_subset,subset=!is_partial)
+  R> descr_part=data_description(rankings_subset,subset=is_partial)
+  R> na_prop_part_by_item <- descr_part\$n_ranks_by_item[1,]/nrow(rankings_subset_part)
 ```
 
 The relationship was first evaluated through a graphical inspection as
 follows.
 
 ``` r
-  R> plot(na\_prop\_part\_by\_item, descr\_full\$mean\_rank, 
-       xlab="Missingness proportion in partial rankings", 
-       ylab="Mean rank from full rankings", 
+  R> plot(na_prop_part_by_item, descr_full\$mean_rank,
+       xlab="Missingness proportion in partial rankings",
+       ylab="Mean rank from full rankings",
        cex.lab=0.9, pch=20)
 ```
 
@@ -1953,10 +1953,10 @@ follows
 
 ``` r
   R> library(coin)
-  R> test\_df=data.frame(NaProp=na\_prop\_part\_by\_item, AvgRank=descr\_full\$mean\_rank)
-  R> perm\_test <- spearman\_test(AvgRank ~ NaProp, data = test\_df, 
+  R> test_df=data.frame(NaProp=na_prop_part_by_item, AvgRank=descr_full\$mean_rank)
+  R> perm_test <- spearman_test(AvgRank ~ NaProp, data = test_df,
                                distribution = approximate(nresample = 10000))
-  R> perm\_test
+  R> perm_test
     Approximative Spearman Correlation Test
   data:  AvgRank by NaProp
   Z = -0.18296, p-value = 0.8603
@@ -2025,3 +2025,5 @@ assumption.
     correlation, as it is nonparametric and allows to better captures
     monotonic relationships in the case of small samples and ties
     occurring after rank-transformation.
+
+:::::::
