--- a/_articles/RJ-2025-019/RJ-2025-019.Rmd
+++ b/_articles/RJ-2025-019/RJ-2025-019.Rmd
@@ -28,7 +28,7 @@ author:
   - Seoul 03063, South Korea
   - |
     [chanmin.kim@skku.edu](chanmin.kim@skku.edu){.uri}
-date: '2025-09-23'
+date: '2025-09-25'
 date_received: '2024-05-24'
 journal:
   firstpage: ~
@@ -1681,7 +1681,7 @@ This work is supported by the National Research Foundation of Korea
 (NRF) grants funded by the Korea government (RS-2025-00554477,
 RS-2024-00407300, NRF-2022R1F1A1062904).
 
-## Appendix {#appendix .unnumbered}
+## Appendix {.appendix}
 
 The appendix presents results from simulation studies conducted under
 various scenarios that were not covered in the main text.
