--- a/_articles/RJ-2025-020/RJ-2025-020.Rmd
+++ b/_articles/RJ-2025-020/RJ-2025-020.Rmd
@@ -37,7 +37,7 @@ author:
   - Rome, Italy
   - |
     [lucia.modugno@bancaditalia.it](lucia.modugno@bancaditalia.it){.uri}
-date: '2025-09-23'
+date: '2025-09-25'
 date_received: '2024-07-16'
 journal:
   firstpage: ~
@@ -1551,7 +1551,7 @@ Rosaria Simone for generously sharing their data.\
 The opinions expressed are those of the authors and do not necessarily
 reflect the views of the Bank of Italy or the Eurosystem.
 
-## Appendix {#sec:appendix}
+## Appendix {.appendix}
 
 ### Estimation algorithms {#app:Algo}
 
