RJ-2025-017 problems fixed

--- a/_articles/RJ-2025-017/RJwrapper.tex
+++ b/_articles/RJ-2025-017/RJwrapper.tex
@@ -50,7 +50,7 @@
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 
-\usepackage{thumbpdf,lmodern,amsfonts,amsmath,mathtools,bm} \newcommand{\va}{{\bf a}} \newcommand{\vb}{{\bf b}} \newcommand{\vc}{{\bf c}} \newcommand{\vd}{{\bf d}} \newcommand{\ve}{{\bf e}} \newcommand{\vf}{{\bf f}} \newcommand{\vh}{{\bf h}} \newcommand{\vl}{{\bf l}} \newcommand{\vr}{{\bf r}} \newcommand{\vW}{{\bf W}} \newcommand{\vS}{{\bf S}} \newcommand{\vE}{{\bf E}} \newcommand{\vG}{{\bf G}} \newcommand{\vF}{{\bf F}} \newcommand{\vK}{{\bf K}} \newcommand{\vm}{{\bf m}} \newcommand{\vp}{{\bf p}} \newcommand{\vt}{{\bf t}} \newcommand{\vs}{{\bf s}} \newcommand{\vu}{{\bf u}} \newcommand{\vv}{{\bf v}} \newcommand{\vw}{{\bf w}} \newcommand{\vx}{{\bf x}} \newcommand{\vy}{{\bf y}} \newcommand{\vz}{{\bf z}} \newcommand{\vA}{{\it A}} \newcommand{\vB}{{\it B}} \newcommand{\vC}{{\it C}} \newcommand{\vH}{{\it H}} \newcommand{\vI}{{\it I}} \newcommand{\vJ}{{\it J}} \newcommand{\vL}{{\it L}} \newcommand{\vM}{{\it M}} \newcommand{\vN}{{\it N}} \newcommand{\vP}{{\it P}} \newcommand{\vQ}{{\it Q}} \newcommand{\vq}{{\it q}} \newcommand{\vR}{{\it R}} \newcommand{\vT}{{\it T}} \newcommand{\vU}{{\it U}} \newcommand{\vV}{{\it V}} \newcommand{\vX}{{\it X}} \newcommand{\vY}{{\it Y}} \newcommand{\vZ}{{\it Z}} \newcommand{\vD}{{\it D}} \newcommand{\Fs}{\mathcal{F}} \newcommand{\ra}{\rightarrow} \newcommand{\vgamma}{\mbox{\boldmath $\gamma$}} \newcommand{\vbeta}{\bm \beta} \newcommand{\vepsilon}{\mbox{\boldmath $\epsilon$}} \newcommand{\vxi}{\mbox{\boldmath $\xi$}} \newcommand{\vpi}{\mbox{\boldmath $\pi$}} \newcommand{\vtheta}{\mbox{\boldmath $\theta$}} \newcommand{\valpha}{\mbox{\boldmath $\alpha$}} \newcommand{\vkappa}{\mbox{\boldmath $\kappa$}} \newcommand{\Real}{\mathbb{R}} \newcommand{\class}[1]{`\code{#1}'} \newcommand{\fct}[1]{\code{#1()}}
+\usepackage{thumbpdf,lmodern,amsfonts,amsmath,mathtools}
 
 \begin{document}
 
@@ -61,7 +61,6 @@
 \volnumber{2}
 \year{2025}
 \month{June}
-\setcounter{page}{146}
 
 \begin{article}
   \input{RJ-2025-017}
