RJ-2025-011 fix missing figure in html

--- a/_articles/RJ-2025-011/RJ-2025-011.tex
+++ b/_articles/RJ-2025-011/RJ-2025-011.tex
@@ -15,7 +15,7 @@ CRAN Task Views have been available on the Comprehensive R Archive Network since
 The Comprehensive R Archive Network (CRAN, \url{https://CRAN.R-project.org/}), comprised
 of approximately one hundred mirror pages around the world along with a content-delivery network (CDN), is the canonical site
 for downloading not only the base R system \citep{r-base} but also more than twenty thousand extension packages
-(actually, 22753 at the time of writing) contributed by users from
+(actually, 22763 at the time of writing) contributed by users from
 the R community. CRAN is a very useful resource within the R
 ecosystem, but its content can be hard to grasp and navigate. Especially users new to R
 can struggle with getting started and finding the relevant R packages for the
@@ -69,7 +69,7 @@ initially 4~task views, listing on average 20~packages each. (Within a year, the
 number of task views increased to 12.)
 But by now there are 48~task views, with median and mean numbers of CRAN
 packages covered 112 and~123, respectively.
-Overall, these task views cover 4940~CRAN packages,
+Overall, these task views cover 4941~CRAN packages,
 which is about 22\% of all CRAN packages.
 This change in scope and scale necessitated a change in infrastructure and workflows
 that the new \emph{CRAN Task View Initiative}, described in detail in the next section,
@@ -149,7 +149,7 @@ gain a first overview of a topic and to search for specific relevant packages
 more efficiently.
 
 \begin{figure}[t!]
-\includegraphics[width=1\linewidth,alt={Screenshot of the header and introduction of the "Econometrics" task view, captured on 2025-04-01 at https://CRAN.R-project.org/view=Econometrics. The header displays the title (Econometrics), maintainers (Achim Zeileis, Grant McDermott, Kevin Tappe), contact e-mail address, version/date, URL, GitHub link, information for potential contributors, the recommended citation, and installation instructions. The introduction starts by outlining the scope and links to other related task views (Finance, TimeSeries, CausalInference).}]{figures/econometrics} \caption{Screenshot of the header and introduction of the "Econometrics" task view.}\label{fig:econometrics}
+\includegraphics[width=1\linewidth,alt={Screenshot of the header and introduction of the Econometrics task view, captured on 2025-04-01 at https://CRAN.R-project.org/view=Econometrics. The header displays the title (Econometrics), maintainers (Achim Zeileis, Grant McDermott, Kevin Tappe), contact e-mail address, version/date, URL, GitHub link, information for potential contributors, the recommended citation, and installation instructions. The introduction starts by outlining the scope and links to other related task views (Finance, TimeSeries, CausalInference).}]{figures/econometrics} \caption{Screenshot of the header and introduction of the "Econometrics" task view.}\label{fig:econometrics}
 \end{figure}
 
 Another benefit of task views that has probably been underappreciated for a long time is
