--- a/_articles/RJ-2025-011/RJ-2025-011.Rmd
+++ b/_articles/RJ-2025-011/RJ-2025-011.Rmd
@@ -215,7 +215,7 @@ The clear structure and focus of the task views should help the readers to quick
 gain a first overview of a topic and to search for specific relevant packages
 more efficiently.
 
-```{r econometrics, fig.cap = 'Screenshot of the header and introduction of the "Econometrics" task view.', fig.alt = 'Screenshot of the header and introduction of the "Econometrics" task view, captured on 2025-04-01 at https://CRAN.R-project.org/view=Econometrics. The header displays the title (Econometrics), maintainers (Achim Zeileis, Grant McDermott, Kevin Tappe), contact e-mail address, version/date, URL, GitHub link, information for potential contributors, the recommended citation, and installation instructions. The introduction starts by outlining the scope and links to other related task views (Finance, TimeSeries, CausalInference).', fig.pos = "t!", out.width = "100%", dpi = 300, echo = FALSE}
+```{r econometrics, fig.cap = 'Screenshot of the header and introduction of the "Econometrics" task view.', fig.alt = 'Screenshot of the header and introduction of the Econometrics task view, captured on 2025-04-01 at https://CRAN.R-project.org/view=Econometrics. The header displays the title (Econometrics), maintainers (Achim Zeileis, Grant McDermott, Kevin Tappe), contact e-mail address, version/date, URL, GitHub link, information for potential contributors, the recommended citation, and installation instructions. The introduction starts by outlining the scope and links to other related task views (Finance, TimeSeries, CausalInference).', fig.pos = "t!", out.width = "100%", dpi = 300, echo = FALSE}
 knitr::include_graphics("figures/econometrics.png")
 ```
 
