RJ-2025-015 fix figures

--- a/_articles/RJ-2025-015/RJ-2025-015.Rmd
+++ b/_articles/RJ-2025-015/RJ-2025-015.Rmd
@@ -30,10 +30,7 @@ author:
   orcid: 0000-0003-4254-1780
 type: package
 output:
-  rjtools::rjournal_pdf_article:
-    toc: no
-  rjtools::rjournal_web_article:
-    self_contained: yes
+  rjtools::rjournal_article:
     toc: no
 bibliography: RJreferences.bib
 date_received: '2024-04-05'
@@ -236,7 +233,7 @@ rectangles <- rbind(rect1_sf, rect2_sf, rect3_sf, rect4_sf, rect5_sf) |>
   mutate(name = c("Rect1","Rect2","Rect3","Rect4","Rect5"))
 ```
 
-```{r, rects1, fig.width=4, fig.height=2, fig.cap = "Simplified scenario with five rectangles. "}
+```{r, rects1, fig.width=4, fig.height=2, fig.cap = "Simplified scenario with five rectangles."}
 ggplot(rectangles) + geom_sf(colour="black", linewidth=1) + geom_sf_label(aes(label=name),size=2.5) +
   coord_sf(datum=NA) +
   theme(axis.title = element_blank(),
