--- a/_articles/RJ-2025-013/RJ-2025-013.Rmd
+++ b/_articles/RJ-2025-013/RJ-2025-013.Rmd
@@ -35,12 +35,11 @@ author:
 date: '2025-09-24'
 date_received: '2024-01-11'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 35
+  lastpage: 55
 volume: 17
 issue: 2
 slug: RJ-2025-013
-citation_url: https://rjournal.github.io/
 packages:
   cran:
   - pald
