--- a/_articles/RJ-2025-016/RJ-2025-016.tex
+++ b/_articles/RJ-2025-016/RJ-2025-016.tex
@@ -425,7 +425,7 @@ head(results)
 \end{verbatim}
 
 \begin{verbatim}
-#> [1] "12GS_3" "13GS_4" "1A1F_4" "1A1J_4" "1A2C_5" "1A3B_4"
+#> [1] "12CA_3" "1A1I_4" "1A2B_3" "1A4I_2" "1A4M_2" "1A52_2"
 \end{verbatim}
 
 Faceted queries (or facets) add another layer of functionality to the perform\_search function by allowing users to group and perform calculations on PDB data through a simple search query. Facets organize search results into categories, or ``buckets,'' based on specified field values.
@@ -503,7 +503,7 @@ protein_entities
 \end{verbatim}
 
 \begin{verbatim}
-#>  [1] "1QK1" "1U0R" "1RQF" "4UY9" "7L26" "1V0P" "4G3D" "7ZP0" "5CEN" "6CD6"
+#>  [1] "5J5T" "4UY9" "5BT8" "1CSN" "7KAC" "1V0P" "8FKO" "4Y85" "1E8X" "1TO6"
 \end{verbatim}
 
 The search retrieves PDB entries associated with protein kinases. We then select the first 10 entries for further analysis. The next step involves retrieving the amino acid sequences for these proteins and performing multiple sequence alignment using the \CRANpkg{msa} package.
@@ -657,10 +657,10 @@ head(df)
 #>   <chr> <chr>            <chr>             <chr>               
 #> 1 2Y9H  240.96           X-RAY DIFFRACTION 2011-02-14T00:00:00Z
 #> 2 4ILM  302.01           X-RAY DIFFRACTION 2012-12-31T00:00:00Z
-#> 3 4XTK  226.22           X-RAY DIFFRACTION 2015-12-15T00:00:00Z
-#> 4 5FCL  680.57           X-RAY DIFFRACTION 2021-03-30T00:00:00Z
-#> 5 7EI1  416.5            X-RAY DIFFRACTION 2020-01-07T00:00:00Z
-#> 6 6TUG  147.1            X-RAY DIFFRACTION 2009-03-18T00:00:00Z
+#> 3 4XTK  309.28           X-RAY DIFFRACTION 2015-01-23T00:00:00Z
+#> 4 5FCL  226.22           X-RAY DIFFRACTION 2015-12-15T00:00:00Z
+#> 5 7EI1  680.57           X-RAY DIFFRACTION 2021-03-30T00:00:00Z
+#> 6 6TUG  416.5            X-RAY DIFFRACTION 2020-01-07T00:00:00Z
 \end{verbatim}
 
 Subsequent processing extracts the deposit year for each entry, enabling the aggregation of data on an annual basis.
@@ -729,7 +729,7 @@ df
 #>   <chr>  <chr>            <chr>                <chr>      <chr>   
 #> 1 4HHB_1 9606             Homo sapiens         120        100     
 #> 2 12CA_1 9606             Homo sapiens         5          100     
-#> 3 3PQR_1 9913             Bos taurus           1253       100
+#> 3 3PQR_1 9913             Bos taurus           1256       100
 \end{verbatim}
 
 For more examples and details on additional functionalities, please consult the package documentation.
@@ -1048,17 +1048,17 @@ structural_data
 \end{verbatim}
 
 \begin{verbatim}
-#>    PDB_ID Resolution  R_free  R_work Molecular_Weight Citation_Year
-#> 1    6GWV       2.80 0.25930 0.23330           519.45          2018
-#> 2    2VA1       2.50 0.28500 0.23200           170.10          2007
-#> 3    2KDC         NA      NA      NA            39.37          2009
-#> 4    3JU6       2.45 0.25400 0.21400           171.77          2010
-#> 5    1Z0Z       2.85 0.27500 0.20800           126.81          2005
-#> 6    1SUW       2.45 0.25220 0.21100           114.60          2005
-#> 7    4IDT       2.40 0.22760 0.19110            79.01          2013
-#> 8    3NWY       2.47 0.26859 0.20474           181.30          2011
-#> 9    7KAC       1.85 0.23180 0.21670            77.02          2021
-#> 10   8FKO       2.10 0.25800 0.21990           224.68          2023
+#>    PDB_ID Resolution R_free R_work Molecular_Weight Citation_Year
+#> 1    1QK1       2.70 0.2190 0.1950           346.49          2000
+#> 2    5J5T       2.85 0.2058 0.1750            42.59          2017
+#> 3    2AP9       2.80 0.2840 0.2580           191.89            NA
+#> 4    1SUW       2.45 0.2522 0.2110           114.60          2005
+#> 5    5BT8       2.30 0.2481 0.2151           254.05            NA
+#> 6    3L2D       2.40 0.2670 0.1970           176.43          2010
+#> 7    1B3Q       2.60 0.2850 0.2130            85.33          1999
+#> 8    1CSN       2.00     NA 0.2070            35.10          1995
+#> 9    7KAC       1.85 0.2318 0.2167            77.02          2021
+#> 10   1V0P       2.00 0.2650 0.1940            66.98          2003
 \end{verbatim}
 
 This example demonstrates how to integrate the get\_info function into a more extensive workflow that includes searching for specific proteins, aligning their sequences, calculating pairwise sequence similarity, and retrieving associated structural and experimental information. The combination of sequence analysis and detailed structural data retrieval enables comprehensive studies on protein function, evolutionary relationships, and potential applications in drug design.
@@ -1462,11 +1462,11 @@ head(pdb_analysis_df_truncated)
 \begin{verbatim}
 #>   PDB_ID Number_of_Papers                                       Paper_Titles
 #> 1   1B04                1 Structure of the adenylation domain of an NAD+-...
-#> 2   4EEQ                1 Design, Synthesis and Activity Evaluation of Po...
-#> 3   3JSL                1 Structure of the adenylation domain of NAD(+)-d...
-#> 4   3RR5                1 ATP-dependent DNA ligase from Thermococcus sp. ...
-#> 5   2HIV                1 A Flexible Interface between DNA Ligase and PCN...
-#> 6   6JX5                1 Structural insights into a HECT-type E3 ligase ...
+#> 2   3RR5                1 ATP-dependent DNA ligase from Thermococcus sp. ...
+#> 3   4EFB                1                    Crystal structure of DNA ligase
+#> 4   2YV1                1 Crystal Structure of Succinyl-CoA Synthetase Al...
+#> 5   8F5D                1 Architecture and genomic arrangement of the Mur...
+#> 6   1V9P                1 Crystal structure of NAD(+)-dependent DNA ligas...
 \end{verbatim}
 
 To identify common themes and keywords in the related papers, we perform a word frequency analysis. This involves creating a text corpus, cleaning the text, and generating a word cloud that visually represents the most frequent terms.
