--- a/_articles/RJ-2025-019/RJ-2025-019.Rmd
+++ b/_articles/RJ-2025-019/RJ-2025-019.Rmd
@@ -31,8 +31,8 @@ author:
 date: '2025-09-25'
 date_received: '2024-05-24'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 176
+  lastpage: 206
 volume: 17
 issue: 2
 slug: RJ-2025-019
