--- a/_articles/RJ-2025-020/RJ-2025-020.Rmd
+++ b/_articles/RJ-2025-020/RJ-2025-020.Rmd
@@ -40,8 +40,8 @@ author:
 date: '2025-09-25'
 date_received: '2024-07-16'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 206
+  lastpage: 231
 volume: 17
 issue: 2
 slug: RJ-2025-020
